public interface Fourmis {
    void coordonnee(Noeud n);
    void residenceDeBase(Noeud n);
    void colonie(Colonie c);
}
