@startuml
'https://plantuml.com/class-diagram

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods

class Graphe {
    -grille
    +Obstacle()
}
class Noeud{
    -cellule
}
class Arete {

}

abstract class Fourmis {
    coordonnee(N:Noeud)
    residenceDeBase(N:Noeud)
}
class Reine {
    -reside
    +donnerNaissance()
}
class Soldat {
    +patrouille(N:Noeud)
}

class Etranger {
    residenceDeBase(N:Noeud)
}


Graphe --> Noeud
Noeud -> Arete
Graphe -> Arete
Noeud --> Fourmis
Fourmis --> Reine : Occupé par une >
Fourmis --> Etranger : Peut contenir >
Reine --> Soldat

@enduml